general ui improved

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,14 +17,11 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .task-item {
   border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 10px;
-}
-
-.task-item.completed {
-  color: red;
 }
 
 .task-item button {
@@ -38,13 +35,16 @@ body {
   flex-direction: column;
 }
 .tabContent {
-  background-color: #85a5ff;
+  background-color: #fafafa;
   height: 60dvh;
   width: 40dvw;
   overflow-y: auto;
   overflow-x: hidden;
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .formHeader {
   width: 40dvw;
@@ -53,4 +53,43 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.custom-datepicker .ant-picker-input {
+  cursor: pointer;
+}
+
+.task-item {
+  padding: 10px;
+  min-width: 100%;
+  border: 1px solid #d9d9d9;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100px;
+}
+
+.task-item.completed {
+  text-decoration: line-through;
+  border-color: #95de64;
+  background-color: #f6ffed;
+}
+.task-item.removed {
+  border-color: #ff7875;
+  background-color: #fff1f0;
+}
+.task-item .ant-card-body {
+  padding: 16px;
+  width: 100%;
+}
+
+.custom-tabs .ant-tabs-tab {
+  font-size: 16px;
+  padding: 12px 24px;
+}
+.custom-tabs .ant-tabs-ink-bar {
+  height: 4px;
+  background-color: #1890ff;
 }
