--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,16 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-:root {
-  --primary: #9e78cf;
-  --secondary: #78cfb0;
-  --danger: #ff3e3e;
-  --bg-color: #0d0714;
-  --dark: #15101c;
-  --grey: #777777;
-  --title-color: #e7e6e6;
-  --text-color: #c3c3c3;
-}
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -62,8 +52,8 @@ body {
 .task-item {
   padding: 10px;
   min-width: 100%;
-  border: 1px solid #d9d9d9;
-  background-color: #f5f5f5;
+  border: 1px solid #91d5ff;
+  background-color: #e6f7ff;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
@@ -77,14 +67,17 @@ body {
   background-color: #f6ffed;
 }
 .task-item.removed {
-  border-color: #ff7875;
+  border-color: #ff7875 !important;
   background-color: #fff1f0;
+}
+.task-item.overdue {
+  border: 1px solid #d9d9d9;
+  background-color: #f5f5f5;
 }
 .task-item .ant-card-body {
   padding: 16px;
   width: 100%;
 }
-
 .custom-tabs .ant-tabs-tab {
   font-size: 16px;
   padding: 12px 24px;
